--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.4",
+        "paypal/rest-api-sdk-php": "*",
         "srmklive/paypal": "~1"
     },
     "require-dev": {
